added Logo, Commented-out test Past Projects

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/noanworks.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Noan Works</title>
   </head>
   <body class="min-w-96">
     <div id="root" ></div>
